# DatabaseSchema

./: .eslintrc.json  .lintstagedrc.json  .prettierignore  .prettierrc.json  IMPLEMENTATION_PLAN.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: build.yml  git-hygiene.yml  lockfile-rationale.yml  perf-enforced.yml  perf-foundation.yml  release.yml  tests.yml
docs/: PORTFOLIO-DISPOSITION.md
scripts/: cleanup-full.sh  cleanup-heavy.sh  lean-dev.sh
src/: App.test.tsx  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: ai.rs  connections.rs  mod.rs  performance.rs  query.rs  schema.rs  settings.rs
src-tauri/src/crypto/: encryption.rs
src-tauri/src/db/: introspect.rs  local.rs  mod.rs  postgres.rs
src-tauri/src/models/: ai.rs  connection.rs  mod.rs  performance.rs  query.rs  schema.rs  settings.rs
src/hooks/: useAi.ts  useConnections.test.ts  useConnections.ts  usePerformance.ts  useQuery.test.ts  useQuery.ts  useSchema.test.ts  useSchema.ts  useSettings.ts  useTheme.ts
src/services/: ai.ts  connections.ts  performance.ts  query.ts  schema.ts  settings.ts
src/stores/: aiStore.test.ts  aiStore.ts  connectionStore.test.ts  connectionStore.ts  performanceStore.test.ts  performanceStore.ts  queryStore.test.ts  queryStore.ts  schemaStore.test.ts  schemaStore.ts  settingsStore.test.ts  settingsStore.ts
(+47 files in other folders)
