[package]
name = "database-schema-visualizer"
version = "0.1.0"
description = "Database Schema Visualizer - A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "database_schema_visualizer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls-ring-webpki", "sqlite", "postgres", "migrate"] }
ring = "0.17"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
tokio = { version = "1", features = ["sync"] }
hostname = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }
